# gen/js/chromestatus-openapi/src/models/index.ts
@@ -14,6 +14,7 @@ export * from './FeatureLink';
 export * from './GateLatency';
 export * from './GetDismissedCues400Response';
 export * from './GetIntentResponse';
+export * from './GetOriginTrialsResponse';
 export * from './LinkPreview';
 export * from './LinkPreviewBase';
 export * from './LinkPreviewGithubIssue';
@@ -29,6 +30,7 @@ export * from './LinkPreviewOpenGraphAllOfInformation';
 export * from './LinkPreviewSpecs';
 export * from './LinkPreviewWebkitBug';
 export * from './MessageResponse';
+export * from './OriginTrialsInfo';
 export * from './OutstandingReview';
 export * from './OwnersAndSubscribersOfComponent';
 export * from './PostIntentRequest';
