# gen/py/chromestatus_openapi/chromestatus_openapi/models/__init__.py
@@ -14,6 +14,7 @@ from chromestatus_openapi.models.feature_link import FeatureLink
 from chromestatus_openapi.models.gate_latency import GateLatency
 from chromestatus_openapi.models.get_dismissed_cues400_response import GetDismissedCues400Response
 from chromestatus_openapi.models.get_intent_response import GetIntentResponse
+from chromestatus_openapi.models.get_origin_trials_response import GetOriginTrialsResponse
 from chromestatus_openapi.models.link_preview import LinkPreview
 from chromestatus_openapi.models.link_preview_base import LinkPreviewBase
 from chromestatus_openapi.models.link_preview_github_issue import LinkPreviewGithubIssue
@@ -29,6 +30,7 @@ from chromestatus_openapi.models.link_preview_open_graph_all_of_information impo
 from chromestatus_openapi.models.link_preview_specs import LinkPreviewSpecs
 from chromestatus_openapi.models.link_preview_webkit_bug import LinkPreviewWebkitBug
 from chromestatus_openapi.models.message_response import MessageResponse
+from chromestatus_openapi.models.origin_trials_info import OriginTrialsInfo
 from chromestatus_openapi.models.outstanding_review import OutstandingReview
 from chromestatus_openapi.models.owners_and_subscribers_of_component import OwnersAndSubscribersOfComponent
 from chromestatus_openapi.models.post_intent_request import PostIntentRequest
