# gen/py/chromestatus_openapi/chromestatus_openapi/models/get_origin_trials_response.py
@@ -1,0 +1,63 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from chromestatus_openapi.models.base_model import Model
+from chromestatus_openapi.models.origin_trials_info import OriginTrialsInfo
+from chromestatus_openapi import util
+
+from chromestatus_openapi.models.origin_trials_info import OriginTrialsInfo  # noqa: E501
+
+class GetOriginTrialsResponse(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, origin_trials=None):  # noqa: E501
+        """GetOriginTrialsResponse - a model defined in OpenAPI
+
+        :param origin_trials: The origin_trials of this GetOriginTrialsResponse.  # noqa: E501
+        :type origin_trials: List[OriginTrialsInfo]
+        """
+        self.openapi_types = {
+            'origin_trials': List[OriginTrialsInfo]
+        }
+
+        self.attribute_map = {
+            'origin_trials': 'origin_trials'
+        }
+
+        self._origin_trials = origin_trials
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'GetOriginTrialsResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The GetOriginTrialsResponse of this GetOriginTrialsResponse.  # noqa: E501
+        :rtype: GetOriginTrialsResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def origin_trials(self) -> List[OriginTrialsInfo]:
+        """Gets the origin_trials of this GetOriginTrialsResponse.
+
+
+        :return: The origin_trials of this GetOriginTrialsResponse.
+        :rtype: List[OriginTrialsInfo]
+        """
+        return self._origin_trials
+
+    @origin_trials.setter
+    def origin_trials(self, origin_trials: List[OriginTrialsInfo]):
+        """Sets the origin_trials of this GetOriginTrialsResponse.
+
+
+        :param origin_trials: The origin_trials of this GetOriginTrialsResponse.
+        :type origin_trials: List[OriginTrialsInfo]
+        """
+
+        self._origin_trials = origin_trials
